--- a/hep-th-9412131/9412131-psu.tex
+++ b/hep-th-9412131/9412131-psu.tex
@@ -145,7 +145,7 @@ Hawking evaporation of black holes terminates in stable remnants.
 An angular slice of the geometry
 of those remnants is shown in Fig. 1.
 
-\ifig\fone{An Angular Slice of the Static Geometry of a Black Hole Remnant}
+\ifig\fone{An angular slice of the static geometry of a black hole remnant}
 {\epsfysize=6cm \epsfbox{f1.eps}}
 
  It is a small ``hole in space'' attached
@@ -158,7 +158,7 @@ distance.  The Penrose diagram of the full spacetime of one of these remnants
 is
 shown in Fig. 2.
 
-\ifig\ftwo{The Penrose Diagram of a Black Hole Remnant}
+\ifig\ftwo{The Penrose diagram of a black hole remnant}
 {\epsfysize=6cm \epsfbox{f2.eps}}
 
  There can be many different quantum states propagating behind the horizon
@@ -248,8 +248,8 @@ dominated
 Roberston Walker universe.  The time evolution of the geometry of the spatial
 sections is shown in Fig. 3.
 
-\ifig\fthree{The Spatial Geometry Inside a Schwarzchild Black Hole Evolves
-Into an Infinite, and Infinitely Thin, Horn}
+\ifig\fthree{The spatial geometry inside a Schwarzchild black hole evolves
+into an infinite, and infinitely thin, horn}
 {\epsfysize=6cm \epsfbox{f3.eps}}
 
 Note that the geometry has the ``hornlike'' shape
@@ -1216,8 +1216,8 @@ both of these features.  The false vacuum region evolves into an ``embolism''
 (Fig. 5), a large inflating DeSitter space connected onto ordinary
 Minkowski space by a rapidly shrinking neck.
 
-\ifig\ffive{The Guth-Farhi Embolism: An Entire Universe Looks Like a Black
-Hole Remnant to An External Observer}
+\ifig\ffive{The Guth-Farhi embolism: an entire universe looks like a black
+hole remnant to an external observer}
 {\epsfysize=6cm \epsfbox{f5.eps}}
 
 By Birkhoff's theorem
@@ -2004,7 +2004,7 @@ like
 classical distinguishable particles.  A double slit experiment for
 cornucopions would resemble Fig. 8.
 
-\ifig\feight{A Double Slit Experiment for Cornucopions}
+\ifig\feight{A double slit Experiment for cornucopions}
 {\epsfysize=6cm \epsfbox{f8.eps}}
 
 Apart from the objections of \horgidd , there is another way in which the
@@ -2593,8 +2593,8 @@ arbitrary number of stranded strings.  These are required to reproduce
 the dynamics of free strings moving in the full space, which cross
 the boundary (Fig. 9).
 
-\ifig\fnine{Stranded Strings Violate the Locality Postulate of Field Theory,
-But Can Only Be Seen With Very Short Time Resolution}
+\ifig\fnine{Stranded strings violate the locality postulate of field theory,
+but can only be seen with very short time resolution.}
 {\epsfysize=6cm \epsfbox{f9.eps}}
 
 It is important to note that the wave functionals of even low energy states
