--- a/2304.10258/draft_EEAAO_v6.tex
+++ b/2304.10258/draft_EEAAO_v6.tex
@@ -1,4 +1,4 @@
-\documentclass[pre,twocolumn,10pt,aps,longbibliography,nofootinbib]{revtex4-1}
+\documentclass[pre,onecolumn,12pt,aps,longbibliography,nofootinbib]{revtex4-2}
 %\documentclass[prl,twocolumn,10pt,aps,longbibliography,nofootinbib]{revtex4-1}
 
  \usepackage[utf8]{inputenc}
@@ -21,6 +21,50 @@
  \usepackage[linktocpage, colorlinks=true, linkcolor=darkblue, citecolor=darkblue]{hyperref}
  \usepackage[all]{hypcap}
  \usepackage[makeroom]{cancel}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.7in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{/Users/psu/arxiv-psu/helpers/cmrsum}
+\input{/Users/psu/arxiv-psu/helpers/fix-underbrace.tex}
+
+
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 % Some new commands used in the text
 
