--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,28 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Pete Su at 2024-12-25 08:38:00 -0500 
+%% Created for Pete Su at 2024-12-30 20:16:17 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Strasberg2024,
+	author = {Strasberg, Philipp and Reinhard, Teresa E. and Schindler, Joseph},
+	date-added = {2024-12-30 20:16:02 -0500},
+	date-modified = {2024-12-30 20:16:02 -0500},
+	doi = {10.1103/physrevx.14.041027},
+	issn = {2160-3308},
+	journal = {Physical Review X},
+	note = {\href{http://arxiv.org/abs/2304.10258v4}{arxiv:2304.10258v4}},
+	number = {4},
+	publisher = {American Physical Society (APS)},
+	title = {First Principles Numerical Demonstration of Emergent Decoherent Histories},
+	url = {http://dx.doi.org/10.1103/physrevx.14.041027},
+	volume = {14},
+	year = {2024},
+	bdsk-url-1 = {http://dx.doi.org/10.1103/physrevx.14.041027}}
 
 @article{Banks1995,
 	abstract = {In these lectures, the author's point of view on the problem of Hawking Evaporation of Black Holes is explained in some detail. A possible resolution of the information loss paradox is proposed, which is fully in accord with the rules of quantum mechanics. Black hole formation and evaporation leaves over a remnant which looks pointlike to an external observer with low resolving power, but actually contains a new infinite asymptotic region of space. Information can be lost to this new region without violating the rules of quantum mechanics. However, the thermodynamic nature of black holes can only be understood by studying the results of measurements that probe extremely small (sub-Planck scale) distances and times near the horizon. Susskind's description of these measurements in terms of string theory may provide an understanding of the Bekenstein-Hawking (BH) entropy in terms of the states of stranded strings that cross the horizon. The extreme nonlocality of string theory when viewed at short time scales allows one to evade all causality arguments which pretend to prove that the information encoded in the BH entropy can only be accessed by the external observer in times much longer than the black hole evaporation time. The present author believes however that the information lost in black hole evaporation is generically larger than the BH entropy, and that the remaining information is causally separated from the external world in the expanding horn of a black hole remnant or cornucopion. The possible observational signatures of such cornucopions are briefly discussed.},
