--- a/physics-9807044/physics-9807044.tex
+++ b/physics-9807044/physics-9807044.tex
@@ -1,7 +1,55 @@
+\documentclass[12pt]{article}
 
-\documentstyle[aps,preprint]{revtex}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{/Users/psu/arxiv-psu/helpers/cmrsum}
+\input{/Users/psu/arxiv-psu/helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{cite}
+\usepackage{microtype}
+\usepackage{textcomp}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
+
 \begin{document}
-\draft
 \title{E. Noether's Discovery of the Deep Connection Between
 Symmetries and
                    Conservation Laws\footnote{To be published in
@@ -10,10 +58,11 @@ Symposium on the Heritage of Emmy Noether which was held in
 Bar-Ilan University, Isreal Dec. 2-4,
 1996.}}
 
-\preprint{UCLA/98/TEP/20; hep-th/9807044}
+%\preprint{UCLA/98/TEP/20; hep-th/9807044}
 
-\author{Nina Byers} \address{Physics
-Department, UCLA, Los Angeles, CA 90024} \date{July 16, 1998}
+\author{Nina Byers \\Physics
+Department\\ UCLA, Los Angeles, CA 90024}
+ \date{July 16, 1998}
  \maketitle
 
 \begin{abstract} 
@@ -430,7 +479,7 @@ general relativity from the condition that  (\ref{gravac}) is
  an extremum
 with respect to variations of  $g^{\mu\nu}$. One obtains 
 \begin{equation} 
-R^{\mu\nu} - \case 1/2Rg^{\mu\nu} = \chi ~
+R^{\mu\nu} -  {\frac{1}{2}} Rg^{\mu\nu} = \chi ~
 T^{\mu\nu} \label{FE} 
 \end{equation}
 where $R^{\mu\nu}$ is the Ricci tensor constructed by contraction from 
@@ -466,7 +515,7 @@ are covariant under the full group.
 In particular, one has 
 the contracted Bianchi identity
 \begin{equation}
-(R^{\mu\nu}  - \case 1/2Rg^{\mu\nu})_{;\mu} ~=~0    \label{bian}
+(R^{\mu\nu}  -  {\frac{1}{2}}Rg^{\mu\nu})_{;\mu} ~=~0    \label{bian}
 \end{equation}
 This equation states that the covariant divergence of the left side of (\ref{FE}) vanishes.
 The covariant divergence differs substantially from the ordinary divergence
@@ -673,7 +722,7 @@ proper laws of conservation of energy with general relativity ... in
 a generalized
 group theory version."  One of the reasons why her theorems have been very important for 20th century  physics is because they are in `a generalized group theory version'.
 
-\acknowledgements
+\section*{Acknowledgements}
 I would like to thank Mina Teicher and her colleagues for organizing this very interesting and rewarding Symposium; and my colleague Basil Gordon for the help he afforded me in understanding and appreciating the workings of the minds of these
 great mathematicians, and for his English translations of their papers,
 and for his close reading of this manuscript in its various drafts. 
@@ -763,16 +812,13 @@ English translation courtesy of Basil Gordon.
 
 
 \onecolumn
-\baselineskip=20pt
-\begin{references}
-
-
-\bibitem{noet} E. Noether, 
+\begin{thebibliography}{999}
+\bibitem[1]{noet} E. Noether, 
 \lq\lq{\it{ Invariante Variationsprobleme}}", Nachr. d. K\"{o}nig. Gesellsch. d.
 Wiss. zu G\"{o}ttingen, Math-phys. Klasse (1918), 235-257; English translation
 M. A. Travel, Transport Theory and Statistical Physics 1(3) 1971,183-207.
 
-\bibitem{byers} Nina Byers, {\it{History of Original Ideas and Basics Discoveries
+\bibitem[]{byers} Nina Byers, {\it{History of Original Ideas and Basics Discoveries
 in Particle Physics}}, H. B. Newman and T. Ypsilantis ed., Plenum Press, New York (1996).
 
 \bibitem{klein} Correspondence between D. Hilbert and F. Klein published by
@@ -864,7 +910,7 @@ Reading, MA 1951.
 \bibitem{wein} Steven Weinberg, {\it{Gravitation and Cosmology}}, John Wiley \& 
 Sons, Inc., New York 1971.
 
-\end{references}
+\end{thebibliography}
 
 
 \end{document}
