--- a/physics-9807044/physics-9807044.tex
+++ b/physics-9807044/physics-9807044.tex
@@ -96,7 +96,7 @@ physics.  It was presented to the July 16, 1918 meeting of the
 {\it{K\"{o}nigliche Gesellschaft der Wissenschaften zu G\"{o}ttingen}} by Felix 
 Klein and published in its {\it{Nachrichten}} [Proceedings]. It was presented by 
  Felix Klein  presumably because
-Noether was not a member of this Royal Society.
+Noether was not a member of this Royal Society.%
 {\footnote{The Royal Society of London, founded in 1662, elected its first
 female member in 1945; the Acad\'{e}mie des Sciences, Paris, was founded in
 1666 and elected its first female member in 1962.}} One wonders if she was even
@@ -399,14 +399,14 @@ Then Hamilton's Principle gives
 \end{equation}
 Here we discuss in some detail laws of energy
 conservation in special and general relativity where Noether's theorem I
-applies in the first case and theorem II in the second. \footnote{
+applies in the first case and theorem II in the second.\footnote{
  In the next section, Noether's
 theorems  will be described more generally.}
  When the action is invariant with respect to 
 transformations of the Poincar\'{e} 
 group,   Noether's theorem I gives a divergence-free
  energy-momentum  tensor $T^{\mu\nu}(x)$ which, symbolically in the notation of 
-  (\ref{symFE}), for scalar fields is given by 
+  (\ref{symFE}), for scalar fields is given by%
 \footnote{ We use Minkowski notation for the components
 of the spacetime point $x$; viz., $x^\mu$ with $\mu = 0, 1, 2, 3$ with $x^0 = t$
 and $x^i$ for three orthogonal space directions ($ i = 1, 2, 3$)~;
@@ -418,7 +418,7 @@ $(-1, 1, 1, 1)$. We also use the notation $\partial_{\mu} \equiv \partial /
 T^{\mu\nu} = {\delta {\cal{L}}\over \delta \partial_{\mu} \phi} \partial^\nu 
 \phi + g^{\mu\nu} {\cal{L}}\; .  \label{Tmunu} 
 \end{equation}
-More generally one may write the energy-momentum tensor as
+More generally one may write the energy-momentum tensor as%
 \footnote{This form is useful  later when we generalize to general relativity.}
 
 \begin{equation} 
@@ -431,7 +431,7 @@ More generally one may write the energy-momentum tensor as
  that the divergence of  $T^{\mu\nu}$ is 
  proportional to the left  side  of (\ref{symFE})\footnote{This is called by
  Noether a Lagrange function.}. Consequently
- when the field equations are satified, the divergence vanishes and we have 
+ when the field equations are satified, the divergence vanishes and we have% 
  \footnote{Repeated
 indices are summed. Relativists' notation for this divergence is 
 $T^{\mu\nu} ~_{,\nu} = 0.$}
@@ -609,7 +609,7 @@ of the Poincar\'{e} group and may be used to calculate energy and momentum
  in gravitationally field free regions and asymptotically field free regions.
 Using such the pseudotensor
 $T^{\mu\nu}_{eff}$,  one can formulate a principle of energy conservation by integrating over a large,
-asymptotically flat spacelike hypersurface.
+asymptotically flat spacelike hypersurface.%
 \footnote{ This is done in Refs. \cite{c&w} and (\cite{L&L}.}  In so doing one obtains a total energy-momentum
 four-vector $P^\alpha$ which is constant in time and includes  the
 energy and momentum carried by gravitational radiation.  The $t^{\mu\nu}$
@@ -684,7 +684,7 @@ Poincar\'{e} group, the four divergences are four  tensor component
 divergences. The vanishing of these divergences give energy-momentum conservation.
 The U(1) Lie group of global gauge transformations 
 in   electrodynamics  is another example.  Corresponding to the generator of this group, one has
-a divergence free  current and from this one proves charge conservation.
+a divergence free  current and from this one proves charge conservation.%
 \footnote{If, on the other hand, the action is invariant with respect to
  local gauge transformations, the symmetry is of an infinite Lie group 
 corresponding to the possibility of independently transforming the gauge
