--- a/physics-9807044/physics-9807044.tex
+++ b/physics-9807044/physics-9807044.tex
@@ -105,7 +105,7 @@ converses which revealed the general connection between symmetries and
 conservation laws in physics.  They led to a deeper understanding of laws such
 as the principles of conservation of energy, angular momentum, etc., and also
 were instrumental in the great discoveries of gauge field symmetries of the 20th
-century.\cite{byers}
+century \cite{byers}.
 
 Remarkably these theorems are something of a departure from the main line of Noether's
 mathematical research, which was the development of modern abstract algebra.  An examination
@@ -153,7 +153,7 @@ calculated  all the 331  invariants of ternary bi-quadratic forms!  Shortly
 thereafter she took the abstract approach to algebra following 
  Hilbert's 1888 basis theory paper. She worked unpaid in Erlangen supervising
 students and sometimes lecturing for her ailing father. After her father died,
-she joined Hilbert and his team in G\"{o}ttingen. \cite{Dick}
+she joined Hilbert and his team in G\"{o}ttingen \cite{Dick}.
 
 In June-July 1915,
 shortly after Noether arrived,  Albert Einstein gave  six 
@@ -166,9 +166,9 @@ the special theory of relativity to include gravity since 1905. In 1907 he
 discovered the importance  of the equality of gravitational and inertial mass
 and formulated the equivalence principle, but it took another eight years  to
 complete the theory.  Finally in November 1915, having found the complete field
-equations, he submitted   the famous paper \cite{einstein} ~ that gives the theory
+equations, he submitted   the famous paper \cite{einstein} that gives the theory
 in its final form. Remarkably, in the same month,  Hilbert
-submitted a manuscript \cite{hilbert} ~ in which the same field  equations are
+submitted a manuscript \cite{hilbert} in which the same field  equations are
 obtained as the solution to a variational problem. Hilbert and
 Einstein  had independently found the field equations at about the same
 time \cite{pais}.  
@@ -356,7 +356,7 @@ gauge dependent (see below). Because  it is not covariant under general coordina
 transformations, it is more properly called  a pseudotensor. 
 Such pseudotensors are covariant with respect to the linear transformations of the Poincar\`{e} group and may be used
 in  asymptotic spacetime regions far from gravitating sources to derive a principle of
-energy conservation.\cite{c&w}
+energy conservation \cite{c&w}.
 
 
 To illucidate these matters further, we discuss in some detail 
