--- a/2302.10778/Stochastic-Quantum_Correspondence22.tex
+++ b/2302.10778/Stochastic-Quantum_Correspondence22.tex
@@ -1,8 +1,4 @@
-\batchmode
-\makeatletter
-\def\input@path{{"/home/jacob/Documents/Work/My Papers/Stochastic Processes and Quantum Theory (2023)/"}}
-\makeatother
-\documentclass[twoside,twocolumn,english,prl,superscriptaddress,nobibnotes,nofootinbib]{revtex4-2}
+\documentclass[12pt,english,prl,superscriptaddress,nobibnotes,nofootinbib]{revtex4-2}
 \usepackage[latin9]{inputenc}
 \setcounter{secnumdepth}{2}
 \setcounter{tocdepth}{1}
@@ -18,6 +14,52 @@
  pdfauthor={Jacob A. Barandes},
  pdfsubject={Physics},
  pdfkeywords={physics}}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{/Users/psu/arxiv-psu/helpers/cmrsum}
+\input{/Users/psu/arxiv-psu/helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\titlelabel{\thetitle.\quad}
+
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
 
 \makeatletter
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%% User specified LaTeX commands.
@@ -107,7 +149,7 @@
 \email{jacob\_barandes@harvard.edu}
 
 \affiliation{Jefferson Physical Laboratory, Harvard University, Cambridge, MA 02138}
-\date{\today}
+\date{7 Sep 2023 }
 \begin{abstract}
 This paper introduces an exact correspondence between a general class
 of stochastic systems and quantum theory. This correspondence provides
@@ -249,6 +291,7 @@ and wave-function collapse.
 \global\long\def\eqsbrace#1{\left.#1\qquad\right\}  }%
 \par\end{center}
 
+\newpage
 
 \section{Introduction\label{sec:Introduction}}
 
@@ -265,7 +308,7 @@ There have been a number of previous attempts in the research literature
 to identify a fundamental relationship connecting stochastic-process
 theory and quantum theory~\citep{SudarshanMatthewsRau:1961sdqms,SkorobogatovSvertilov:1998qmcbfaansp,Gillespie:2000nsp,GillespieAlltopMartin:2001mqmpaacsp,Aaronson:2005qcahv,Strocchi:2008aittmsoqm,Frasca:2012qmitsroasp}.
 The most well-known of these approaches are due to Bopp~\citep{Bopp:1947qsuk,Bopp:1952efdqbsdk,Bopp:1953sudgdqde},
-Fényes~\citep{Fenyes:1952ewbuidq}, and Nelson~\citep{Nelson:1966dtobm,Nelson:1985qf}.
+Fï¿½nyes~\citep{Fenyes:1952ewbuidq}, and Nelson~\citep{Nelson:1966dtobm,Nelson:1985qf}.
 Altogether different are stochastic-collapse models~\citep{GhirardiRiminiWeber:1986udmms,BassiGhirardi:2003drm},
 in which a quantum system's wave function or density matrix is assumed
 to experience stochastic fluctuations through time.
@@ -845,7 +888,7 @@ the same form as the standard expressions for quantum expectation
 values. (For pedagogical treatments of quantum theory, see~\citep{GriffithsSchroeter:2018iqm,Townsend:2012maqm,Shankar:1994pqm,SakuraiNapolitano:2010mqm,SchumacherWestmoreland:2010qpsi}.)
 
 These formulas are all expressed in what would conventionally be called
-the \emph{Schrödinger picture}. It will also end up being useful
+the \emph{Schrï¿½dinger picture}. It will also end up being useful
 to introduce the \emph{Heisenberg picture}, which is defined according
 to 
 \begin{equation}
@@ -937,7 +980,7 @@ dilations in Subsection~\ref{subsec:Dilations}.
 
 The Hilbert-space formulation has another form of gauge invariance,
 which appears to have first been written down in~\citep{Brown:1999aooiqm}
-in the context of transformations of the Schrödinger equation between
+in the context of transformations of the Schrï¿½dinger equation between
 inertial and non-inertial reference frames. Letting $V\left(t\right)$
 be a time-dependent unitary matrix, the following transformation is
 also a gauge invariance of the Hilbert-space formulation, leaving
@@ -1134,7 +1177,7 @@ then evolves in time according to the \emph{von Neumann equation},
 i\hbar\frac{\partial\densitymatrix\left(t\right)}{\partial t}=\bracks{H\left(t\right),\densitymatrix\left(t\right)},\label{eq:VonNeumannEq}
 \end{equation}
  its state vector $\Psi\left(t\right)$ (if it exists) evolves according
-to the \emph{Schrödinger equation}, 
+to the \emph{Schrï¿½dinger equation}, 
 \begin{equation}
 i\hbar\frac{\partial\Psi\left(t\right)}{\partial t}=H\left(t\right)\Psi\left(t\right),\label{eq:SchrodingerEq}
 \end{equation}
@@ -1175,7 +1218,7 @@ a gauge-invariant observable, even though it may happen to coincide
 with various observables according to particular gauge choices. (For
 pedagogical treatments of non-Abelian gauge theories, see~\citep{PeskinSchroeder:1995iqft,Weinberg:1996tqtfii}.)
 
-Furthermore, one can write the Schrödinger equation \eqref{eq:SchrodingerEq}
+Furthermore, one can write the Schrï¿½dinger equation \eqref{eq:SchrodingerEq}
 as 
 \begin{equation}
 \mathcal{D}\left(t\right)\Psi\left(t\right)=0.\label{eq:GaugeCovariantSchrodiginerEq}
@@ -1218,7 +1261,7 @@ vanishing curvature.}
 
 \subsection{Interference\label{subsec:Interference}}
 
-The appearance of the Schrödinger equation \eqref{eq:SchrodingerEq}
+The appearance of the Schrï¿½dinger equation \eqref{eq:SchrodingerEq}
 is an important signal that the dictionary \eqref{eq:DefDictionary}
 is more than just a tool for using Hilbert-space methods to craft
 highly general forms of stochastic dynamics. It also suggests that
@@ -1344,11 +1387,11 @@ of interference in quantum systems happened to resemble the behavior
 of interfering waves propagating in three-dimensional physical space.
 
 These historical examples were clearly special cases. \emph{Multiparticle}
-systems have Schrödinger waves that propagate through high-dimensional
-configuration spaces, as was noted by Schrödinger himself in his early
+systems have Schrï¿½dinger waves that propagate through high-dimensional
+configuration spaces, as was noted by Schrï¿½dinger himself in his early
 work on wave mechanics~\citep{Schrodinger:1926autotmoaam}. For more
 abstract systems, like \emph{qubits}, there fail to exist continuous
-configuration spaces for Schrödinger waves altogether.
+configuration spaces for Schrï¿½dinger waves altogether.
 
 This new way of thinking about quantum-mechanical interference has
 implications for the interpretation of the famous \emph{double-slit experiment}.
@@ -1366,7 +1409,7 @@ distribution of landing sites from particles passing through the \emph{lower}
 slit. In the case of quantum-mechanical particles like electrons,
 however, one instead finds that the landing sites form a wavelike
 interference pattern, and the conclusion is supposedly that each particle
-is really a Schrödinger wave of some kind, or that the particle fails
+is really a Schrï¿½dinger wave of some kind, or that the particle fails
 to go through one slit or the other.\footnote{The exposition in~\citep{FeynmanLeightonSands:1965tflopv3} ends
 up at precisely such a conclusion: ``It is \emph{not} true that the
 electrons go \emph{either} through hole 1 or hole 2.'' {[}Emphasis
@@ -1389,11 +1432,11 @@ comprehensive framework for describing indivisible stochastic dynamics,
 it was difficult to recognize just how nonintuitive such dynamics
 could be, or what sorts of empirically appearances it could produce.
 
-In response to this last point, one might suggest that Schrödinger
+In response to this last point, one might suggest that Schrï¿½dinger
 waves nonetheless offer a superior means of explaining why the double-slit
 experiment yields the results that it does. Unfortunately, such hopes
 are dashed as soon as one considers sending \emph{two} particles toward
-the slits on each run of the experiment. A two-particle system's Schrödinger
+the slits on each run of the experiment. A two-particle system's Schrï¿½dinger
 wave evolves in a \emph{six-dimensional} configuration space, which
 is arguably not more intuitive than indivisible stochastic dynamics.
 
@@ -1406,7 +1449,7 @@ analysis of the double-slit experiment alone that calls for positing
 quantum fields. The necessity of quantum field theory comes from other
 theoretical and empirical considerations. (For a modern motivation,
 see \citep{Weinberg:1996tqtfi}.) One should also keep in mind that
-quantum fields are conceptually distinct from Schrödinger wave functions.
+quantum fields are conceptually distinct from Schrï¿½dinger wave functions.
 
 \subsection{Implications of Interference\label{subsec:Implications-of-Interference}}
 
@@ -2998,6 +3041,8 @@ McMullen, Simon Milz, Arjun Mirani, Wayne Myrvold, Filip Niewinski,
 Jill North, John Norton, Matthew Reece, Vivishek Sudhir, Noel Swanson,
 Xi Yin, and Nicole Yunger Halpern for helpful conversations.
 
+\newpage
+\raggedright
 \bibliographystyle{1_home_jacob_Documents_Work_My_Papers_Stochasti____Quantum_Theory__2023__custom-abbrvunsrturl}
 \bibliography{0_home_jacob_Documents_Work_My_Papers_Bibliography_Global-Bibliography}
 
