--- a/yoneda-speedrun/yoneda-main.tex
+++ b/yoneda-speedrun/yoneda-main.tex
@@ -72,10 +72,15 @@ We will call this collection $\Arrows(\CC)$. \end{itemize}%
 The objects and arrows of a category satisfy the following conditions:
 \begin{itemize}
 \item
-Each arrow $f$ connects one object $A \in \objc$ to another object $B \in \objc$ and we denote
-this by writing $f: A \to B$. $A$ is called the {\it source} (or {\it domain}) of $f$ and $B$ the {\it target} (or 
-{\it codomain}). Source and target are more intuitive terms, but domain and codomain connect the language
+Each arrow $f$ connects one object $A \in \objc$ to another object $B \in \objc$. 
+$A$ is called the {\it source} (or {\it domain}) of $f$ and $B$ the {\it target} (or 
+{\it codomain}). Source and target are more intuitive terms, 
+but domain and codomain connect the language
 to functions in other areas of mathematics.
+\item For any two objects $A, B$ we denote the collection of all arrows
+from $A$ to $B$ as $\Arrows_{\CC}(A,B)$, or just $\Arrows(A,B)$ if the
+context makes the category obvious. We also write $f: A \to B$ as a synonym for
+$f \in \Arrows(A,B)$.
 \item
 For each pair of arrows $f:A \to B$ and $g : B \to C$ we can form a new arrow $g \circ f:
 A \to C$ called the {\it composition} of $f$ and $g$. This is also sometimes written $gf$.
@@ -102,22 +107,20 @@ tells you that each mapping $f: A \to B$ acts on things in the set $A$ and sends
 the set $B$. There is nothing said about the specific action of $f$ on any single element of $A$.
 Category theory only ponders aggregate questions.
 
-Given a category $\CC$ and objects $A, B$ in $\CC$ we write 
-$\Arrows_{\CC}(A, B)$ to mean the collection of all arrows 
-from $A$ to $B$ in $\CC$ if we are being maximally careful. In practice
-we will usually write $\Arrows(A,B)$ because the $\CC$ subscript is tedious and
-it's clear what category $A$ and $B$ come from. People
-also write $\Hom(A, B)$ or $\Hom_{\CC}(A,B)$, or $\ihom(A, B)$ or just $\CC(A,B)$ to mean
-$\Arrows(A,B)$. Here ``$\Hom$'' stands for homomorphism, which is a standard word for
-mappings that preserve some kind of structure. Category theory, and the Yoneda lemma,
-it turns out, is mostly about the arrows.
-
 \goodbreak
 I have broken with well established tradition in mathematical writing and mostly
 spelled out names for clarity rather than engaging in the strange and random abbreviations
 that I see in most category theory texts. The general fear of readable names in the
 mathematical literature is fascinating to me, having spent most of my life trying to think
-up readable names in program source code. Life is too short to deal with names like
+up readable names in program source code. 
+
+Thus, I like things like my notation $\Arrows(A, B)$ for the collection of arrows between two
+objects because it is clear and to the point as opposed to the more standard
+$\Hom(A, B)$ or $\Hom_{\CC}(A,B)$, or $\ihom(A, B)$ or just $\CC(A,B)$.
+Here ``$\Hom$'' stands for homomorphism, which is a standard word for
+mappings that preserve some kind of structure. But why bother with all that mental overhead.
+
+Similarly, life is too short to deal with names like
 $\mathop{\mathit{ob}}$, or $\cat{Htpy}$, or $\cat{Matr}$. Again, our favorite category for the
 rest of this note will be the straightforwardly named $\Set$, where the objects are sets and the
 arrows are mappings between sets.
