--- a/yoneda-speedrun/yoneda-main.tex
+++ b/yoneda-speedrun/yoneda-main.tex
@@ -241,7 +241,7 @@ appears to be related to the fact that you can construct them from {\it only} wh
 given to you in the categories at hand. The natural transformation takes the action of $F$
 on $\CC$ and lines it up exactly with the action of $G$ on $\CC$. No other assumptions or
 conditions are needed. In this sense they define a relationship between functors that is
-just sitting there in the world no matter what, and thus ``natural''. Another apt way of
+just sitting there in the world no matter what, and is thus ``natural''. Another apt way of
 putting this is that natural transformations give a canonical way of moving between the
 images of two functors \cite{Goedecke}.
 
