--- a/gr-qc-9707012v1/ch7-BH.tex
+++ b/gr-qc-9707012v1/ch7-BH.tex
@@ -257,10 +257,10 @@ spacetime is stationary at late times, so we might expect particle creation to
 be just a transient phenomenon determined by details of the collapse.
 
 But the \emph{infinite time dilation} at the horizon of a black hole means 
-that particles created in the collapse can take arbitrarily long to escape -
-suggests a possible flux of particles at late times that is due to the existence
+that particles created in the collapse can take arbitrarily long to escape.
+This suggests a possible flux of particles at late times that is due to the existence
 of the horizon and \emph{independent of the details of the collapse}.  There is
-such a particle flux, and it turns out to be thermal - this is \emph{Hawking
+in fact such a particle flux, and it turns out to be thermal --- this is \emph{Hawking
 radiation}\index{Hawking!radiation}
 
 We shall consider only a massless scalar field $\Phi$ in a Schwarzschild black 
