--- a/gr-qc-9707012/ch7-BH.tex
+++ b/gr-qc-9707012/ch7-BH.tex
@@ -261,7 +261,7 @@ that particles created in the collapse can take arbitrarily long to escape.
 This suggests a possible flux of particles at late times that is due to the existence
 of the horizon and \emph{independent of the details of the collapse}.  There is
 in fact such a particle flux, and it turns out to be thermal --- this is \emph{Hawking
-radiation}\index{Hawking!radiation}
+radiation}\index{Hawking!radiation}.
 
 We shall consider only a massless scalar field $\Phi$ in a Schwarzschild black 
 hole spacetime.  From Question IV.4 we learn that the positive frequency
