--- a/1711.01477/ium.tex
+++ b/1711.01477/ium.tex
@@ -1,26 +1,31 @@
 \documentclass[letter,12pt]{amsart}
 
-\usepackage[colorlinks=true
-,urlcolor=blue
-,anchorcolor=blue
-,citecolor=blue
-,filecolor=blue
-,linkcolor=blue
-,menucolor=blue
-,linktocpage=true]{hyperref}
-\hypersetup{
-bookmarksopen=true,
-bookmarksnumbered=true,
-bookmarksopenlevel=10
-}
-%\usepackage{amssymb}
 %\usepackage{amsmath,amsthm,amscd,amssymb}
-\usepackage[noBBpl]{mathpazo}
-\linespread{1.05}
-%\usepackage[letterpaper, margin=1.2in]{geometry}
-\usepackage[papersize={6.9in, 10in}, left=.5in, right=.5in, top=1in, bottom=1in]{geometry}
-\tolerance=2000
-\hbadness=2000
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.8in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{/Users/psu/arxiv-psu/helpers/cmrsum}
+\input{/Users/psu/arxiv-psu/helpers/fix-underbrace.tex}
+
+\usepackage{eulervm}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 
 % \documentclass{bull-l}
 \usepackage[numbers]{natbib}
@@ -66,8 +71,22 @@ bookmarksopenlevel=10
   \addtocounter{footnote}{-1}%
   \endgroup}
 
-
-\usepackage{hyperref} % should be the package loaded last
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
 \hypersetup{pdftitle={\mytitle}}
 \hypersetup{pdfauthor={\myauthor}}
 
@@ -194,6 +213,8 @@ I thank the {\em Oswald Veblen Fund} and the {\em Friends of the Institute for A
 Advanced Study in Winter/Spring, 2017, where I worked on part of this paper, and the Institute for Advanced Study School of Mathematics {\em
   Fund for Mathematics} for supporting my stay in Winter/Spring, 2018, where I finished it.  I thank Benedikt Ahrens, Guillaume Brunerie, 
 Thierry Coquand, Bas Spitters,  Mart\'in Escard\'o, and Anders M\"ortberg for useful comments on earlier drafts of this paper.
+
+\newpage
 
 \section{What is a type?}
 
@@ -876,6 +897,7 @@ In \citep{1509.07584} one may find a type theoretic proof of the Brouwer fixed p
 In \citep{1802.02191} is a synthetic proof of the theorem that cellular cohomology computes ordinary cohomology of CW-complexes, under the
 assumption that the CW-complexes are finite.
 
+\raggedright
 \bibliographystyle{amsplain}
 \bibliography{papers}
 % \printindex
