--- a/winograd-1990/thinking-machines.tex
+++ b/winograd-1990/thinking-machines.tex
@@ -144,7 +144,7 @@ The fundamental principle is the identification of intelligence with the functio
 A physical symbol system has the necessary and sufficient means for general intelligent action... By ``general intelligent action''we wish to indicate the same scope of intelligence we see in human action: that in any real situation behavior appropriate to the ends of the system and adaptive to the demands of the environment can occur, within some limits of speed and complexity. ({\it \cite{newell1976}})
 \eq
 
-This `physical symbol system hypothesis'' presupposes materialism: the claim that all of the observed properties of intelligent beings can ultimately be explained in terms of lawful physical processes. It adds the claim that these processes can be described at a level of abstraction in which all relevant aspects of physical state can be understood as the encoding of symbol structures and that the activities can be adequately characterized as systematic application of symbol manipulation rules.
+This ``physical symbol system hypothesis'' presupposes materialism: the claim that all of the observed properties of intelligent beings can ultimately be explained in terms of lawful physical processes. It adds the claim that these processes can be described at a level of abstraction in which all relevant aspects of physical state can be understood as the encoding of symbol structures and that the activities can be adequately characterized as systematic application of symbol manipulation rules.
 The essential link is {\it representation} --- the encoding of the relevant aspects of the world. Newell lays this out explicitly:
 \bq
 An intelligent agent is embedded in a {\it task environment};  a task statement
