--- a/2503.20704/cat-has-colimits.tex
+++ b/2503.20704/cat-has-colimits.tex
@@ -1,6 +1,12 @@
 \documentclass[a4paper,UKenglish,cleveref, autoref, thm-restate]{lipics-v2021}
 \pdfoutput=1 %uncomment to ensure pdflatex processing (mandatatory e.g. to submit to arXiv)
 
+\usepackage[papersize={6.0in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
 %This is a template for producing LIPIcs articles.
 %See lipics-v2021-authors-guidelines.pdf for further information.
 %for A4 paper format use option "a4paper", for US-letter use option "letterpaper"
@@ -161,6 +167,22 @@
 \let\c@equation\c@theorem
 \makeatother
 
+% hyperref last because otherwise some things go wrong.
+\usepackage{hyperref}
+\hypersetup{colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
 \bibliographystyle{plainurl}% the mandatory bibstyle
 
 
@@ -228,8 +250,10 @@
 
 \maketitle
 
+\newpage
 \tableofcontents
 
+\newpage
 \section{Introduction}
 
 One of the myriad ways in which ``category theory eats itself'' is that the categorically-defined notions of limits and colimit can be interpreted in the category $\Cat$ itself, whose objects are categories\footnote{An important point that is often elided on paper but is necessary to treat precisely in formalization is that the category of categories \cdoc{Cat}.\texttt{\{v,u\}} is parametrized by two implicit universe levels, one \texttt{u} for the type of objects and one \texttt{v} for the hom-types.} and functors between them. Any suitably-small diagram of categories and functors has a \emph{limit} in $\Cat$ which is constructed by forming the limit of the corresponding diagrams of objects and hom-sets.\footnote{The definition of \emph{limit} is reviewed in \S\ref{sec:strict-segal}; \emph{colimits} are dual, formed by reversing the arrows.} For example, the \emph{product} of two categories $C$ and $D$ is the category whose objects are defined as the product $\ob\,\,C \times \ob\,D$ of the types of objects of $C$ and $D$. Given objects $c,c' : \ob\,C$ and $d,d' : \ob\,D$, the hom-type from $(c,d)$ to $(c',d')$ in the product category is the product $\Hom_C(c,c') \times \Hom_D(d,d')$ of the hom-types in $C$ and $D$.
